# Dubins_Car_Autoparking

./: .gitignore  CMakeLists.txt  Makefile  app  main.cpp
include/: car.hpp  engine.hpp  helpers.hpp  parking_spot.hpp  path_manager.hpp
src/: car.cpp  engine.cpp  main.cpp  parking_spot.cpp  path_manager.cpp  utils.cpp
test_imgui/: CMakeLists.txt
test_imgui/imgui/: imconfig.h
test_imgui/include/: imconfig.h
test_imgui/src/: main.cpp
